# lawyer-mcp

./: .gitignore  README.md  lawyer_mcp.py  pyproject.toml
tests/: test_auth_header.py  test_dynamic_toolset.py  test_errors.py  test_http_client.py  test_http_invalid_json.py  test_http_post.py  test_laws_all_pagination.py  test_mcp_contract.py  test_openapi_cache.py  test_openapi_summary.py  test_schema_anyof_null.py  test_schema_validation.py  test_ssl_context.py  test_toolset.py
